<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/effetBleu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#830099cc"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="50dp"
        android:paddingTop="50dp">

        <TextView
            android:id="@+id/texteBienvenue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="monospace"
            android:gravity="center_vertical"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:text="@string/bienvenue_au_jeu_97_cartes"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="27sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/boutonNouvellePartie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:background="@drawable/bouton_commencer"
            android:fontFamily="monospace"
            android:gravity="center_vertical|center_horizontal"
            android:paddingBottom="20dp"
            android:paddingEnd="20dp"
            android:paddingStart="20dp"
            android:paddingTop="20dp"
            android:text="@string/nouvelle_partie"
            android:textAllCaps="false"
            android:textSize="21sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/bordure"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"
            android:background="@android:color/white" />

        <TextView
            android:id="@+id/titreMeilleurScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:text="@string/meilleur_score"
            android:textColor="@android:color/white"
            android:textSize="21sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/meilleurScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>