<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cadrePrincipal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1150cf"
    android:orientation="vertical"
    android:visibility="visible"
    tools:context=".JeuActivity">

    <LinearLayout
        android:id="@+id/ligneTitres"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3.5"
        android:background="@android:color/background_dark"
        android:gravity="bottom|center_horizontal"
        android:orientation="horizontal"
        android:visibility="visible">

        <TextView
            android:layout_width="128dp"
            android:layout_height="match_parent"
            android:fontFamily="monospace"
            android:gravity="bottom|center"
            android:text="@string/nb_de_cartes"
            android:textColor="@android:color/background_light"
            android:textSize="17sp"
            android:textStyle="bold"
            android:visibility="visible" />

        <TextView
            android:layout_width="128dp"
            android:layout_height="match_parent"
            android:fontFamily="monospace"
            android:gravity="bottom|center"
            android:text="@string/temps"
            android:textColor="@android:color/background_light"
            android:textSize="17sp"
            android:textStyle="bold"
            android:visibility="visible" />

        <TextView
            android:layout_width="128dp"
            android:layout_height="match_parent"
            android:fontFamily="monospace"
            android:gravity="bottom|center"
            android:text="@string/score"
            android:textColor="@android:color/background_light"
            android:textSize="17sp"
            android:textStyle="bold"
            android:visibility="visible" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ligneValeurs"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        android:layout_weight="3.5"
        android:background="@android:color/background_dark"
        android:gravity="top|center_horizontal"
        android:orientation="horizontal"
        android:visibility="visible">

        <TextView
            android:id="@+id/nbCartes"
            android:layout_width="128dp"
            android:layout_height="match_parent"
            android:fontFamily="monospace"
            android:gravity="top|center"
            android:textColor="@android:color/background_light"
            android:textSize="17sp"
            android:visibility="visible" />

        <Chronometer
            android:id="@+id/temps"
            android:layout_width="128dp"
            android:layout_height="match_parent"
            android:textSize="17sp"
            android:textColor="@android:color/background_light"
            android:gravity="top|center"
            android:fontFamily="monospace"
            android:visibility="visible" />

        <TextView
            android:id="@+id/score"
            android:layout_width="128dp"
            android:layout_height="match_parent"
            android:fontFamily="monospace"
            android:gravity="top|center"
            android:textColor="@android:color/background_light"
            android:textSize="17sp"
            android:visibility="visible" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ligneJeu1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="bottom"
        android:layout_weight="12"
        android:gravity="bottom|center_horizontal"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/zoneCarte1"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="25dp"
            android:layout_marginStart="50dp"
            android:background="@drawable/triangle_hg"
            android:gravity="center_vertical|end"
            android:orientation="vertical"
            android:paddingEnd="5dp"
            android:paddingStart="60dp"
            android:visibility="visible">

            <TextView
                android:layout_width="55dp"
                android:layout_height="80dp"
                android:background="@drawable/carte_fond"
                android:fontFamily="monospace"
                android:paddingEnd="0dp"
                android:paddingStart="4dp"
                android:text="@string/_0"
                android:textColor="@android:color/darker_gray"
                android:textSize="30sp"
                android:textStyle="bold"
                android:visibility="visible" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/zoneCarte2"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginEnd="50dp"
            android:layout_marginStart="25dp"
            android:background="@drawable/triangle_hd"
            android:gravity="center_vertical|start"
            android:orientation="vertical"
            android:paddingEnd="60dp"
            android:paddingStart="5dp"
            android:visibility="visible">

            <TextView
                android:layout_width="55dp"
                android:layout_height="80dp"
                android:background="@drawable/carte_fond"
                android:fontFamily="monospace"
                android:paddingEnd="0dp"
                android:paddingStart="4dp"
                android:text="@string/_0"
                android:textColor="@android:color/darker_gray"
                android:textSize="30sp"
                android:textStyle="bold"
                android:visibility="visible" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ligneAnnuler"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal"
        android:visibility="visible">

        <Button
            android:id="@+id/boutonAnnuler"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/bouton_annuler"
            android:visibility="visible" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ligneJeu2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="top"
        android:layout_marginBottom="20dp"
        android:layout_weight="12"
        android:gravity="top|center_horizontal"
        android:orientation="horizontal"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/zoneCarte3"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginEnd="25dp"
            android:layout_marginStart="50dp"
            android:background="@drawable/triangle_bg"
            android:gravity="center_vertical|end"
            android:orientation="vertical"
            android:paddingEnd="5dp"
            android:paddingStart="60dp"
            android:visibility="visible">

            <TextView
                android:layout_width="55dp"
                android:layout_height="80dp"
                android:background="@drawable/carte_fond"
                android:fontFamily="monospace"
                android:paddingEnd="0dp"
                android:paddingStart="4dp"
                android:text="@string/_98"
                android:textColor="@android:color/darker_gray"
                android:textSize="30sp"
                android:textStyle="bold"
                android:visibility="visible" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/zoneCarte4"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginEnd="50dp"
            android:layout_marginStart="25dp"
            android:background="@drawable/triangle_bd"
            android:gravity="center_vertical|start"
            android:orientation="vertical"
            android:paddingEnd="60dp"
            android:paddingStart="5dp"
            android:visibility="visible">

            <TextView
                android:layout_width="55dp"
                android:layout_height="80dp"
                android:background="@drawable/carte_fond"
                android:fontFamily="monospace"
                android:paddingEnd="0dp"
                android:paddingStart="4dp"
                android:text="@string/_98"
                android:textColor="@android:color/darker_gray"
                android:textSize="30sp"
                android:textStyle="bold"
                android:visibility="visible" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ligneCartesAJouer1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="12"
        android:gravity="bottom|center_horizontal"
        android:orientation="horizontal"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/zCarteAJouer1"
            android:layout_width="55dp"
            android:layout_height="80dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="visible">

        </LinearLayout>

        <LinearLayout
            android:id="@+id/zCarteAJouer2"
            android:layout_width="55dp"
            android:layout_height="80dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="visible">

        </LinearLayout>

        <LinearLayout
            android:id="@+id/zCarteAJouer3"
            android:layout_width="55dp"
            android:layout_height="80dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="visible">

        </LinearLayout>

        <LinearLayout
            android:id="@+id/zCarteAJouer4"
            android:layout_width="55dp"
            android:layout_height="80dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="visible">

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ligneCartesAJouer2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="12"
        android:gravity="top|center_horizontal"
        android:orientation="horizontal"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/zCarteAJouer5"
            android:layout_width="55dp"
            android:layout_height="80dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="visible">

        </LinearLayout>

        <LinearLayout
            android:id="@+id/zCarteAJouer6"
            android:layout_width="55dp"
            android:layout_height="80dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="visible">

        </LinearLayout>

        <LinearLayout
            android:id="@+id/zCarteAJouer7"
            android:layout_width="55dp"
            android:layout_height="80dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="visible">

        </LinearLayout>

        <LinearLayout
            android:id="@+id/zCarteAJouer8"
            android:layout_width="55dp"
            android:layout_height="80dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="visible">

        </LinearLayout>

    </LinearLayout>

</LinearLayout>